add python wrapper and the corresponding changes to make

--- a/wrappers/python/CMakeLists.txt
+++ b/wrappers/python/CMakeLists.txt
@@ -26,13 +26,13 @@ include(${PRO_DIR}/cmake/Common.cmake)
 #set(BOOST_FIND_VERSION 1.67)
 
 # Boost Python 2.7
-set(PYTHON_FIND_VERSION 2.7)
-set(PYTHON_BOOST_SUFFIX 27)
-set(PYTHON_BOOST_CODE)
+#set(PYTHON_FIND_VERSION 2.7)
+#set(PYTHON_BOOST_SUFFIX 27)
+#set(PYTHON_BOOST_CODE)
 # Boost Python 3.6
-#set(PYTHON_FIND_VERSION 3.6)
-#set(PYTHON_BOOST_SUFFIX 36)
-#set(PYTHON_BOOST_CODE 3)
+set(PYTHON_FIND_VERSION 3.6)
+set(PYTHON_BOOST_SUFFIX 36)
+set(PYTHON_BOOST_CODE 3)
 
 if(OS_MAC)
   execute_process(
